# Circuitpython_I2C_Demo

./: .sync-exclude  README.md  circup-req.txt  code.py  pyproject.toml  requirements.txt  sync_in.sh  sync_out.sh
