[project]
name = "feather_rev_tft-i2c-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "adafruit-circuitpython-ble>=10.1.2",
    "adafruit-circuitpython-displayio-ssd1306>=3.0.5",
    "adafruit-circuitpython-is31fl3741>=1.5.7",
    "adafruit-circuitpython-max1704x>=1.0.16",
    "adafruit-circuitpython-neopixel>=6.4.1",
    "adafruit-circuitpython-sht4x>=1.0.26",
    "adafruit-circuitpython-spa06-003>=1.1.1",
    "adafruit-circuitpython-st7789>=2.1.4",
    "circuitpython-wiichuck>=0.0.3",
]
